--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,177 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  margin: 0;
+  font-family: "Inter", sans-serif;
+  color: #161616;
+  height: 100vh;
+}
+
+a:link,
+a:visited {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+header {
+  background-color: #fff7ed;
+}
+
+header > .container {
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  justify-content: space-between;
+  align-items: center;
+  padding-block: 2.25em;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+header h1 {
+  margin: 0;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+.logo a:link,
+.logo a:visited {
+  font-size: 1.5625rem;
+  font-weight: 900;
+  color: #000;
+  line-height: 1.6;
+  display: inline-block;
+}
+
+header nav ul {
+  display: flex;
+  gap: 0.75em;
+}
+
+header nav ul li a:link,
+header hav ul li a:visited {
+  color: #4d4d4d;
+}
+
+.container {
+  width: 100%;
+  max-width: 550px;
+  padding: 0 1.625em;
+  margin: 0 auto;
+}
+
+.main {
+  position: relative;
+  z-index: 0;
+  background-color: #161616;
+  color: #fff;
+  background-image: url("/images/home-hero.png");
+}
+
+.bg-overlay {
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(22, 22, 22, 0.9);
+}
+
+.main > .container {
+  padding-block: 4.0625em;
+}
+
+.main > .container h2 {
+  font-size: 2.25rem;
+  line-height: 1.17;
+  font-weight: 700;
+}
+
+.main > .container p {
+  margin-top: 1.4375em;
+  line-height: 1.5;
+  /* font-weight: 500; */
+}
+
+.main > .container a:link,
+.main > .container a:visited {
+  display: block;
+  color: #fff;
+  background-color: #ff8c38;
+  text-align: center;
+  border-radius: 5px;
+  font-weight: 700;
+  padding: 1em;
+  margin-top: 6.125em;
+}
+
+footer {
+  background-color: #252525;
+  color: #aaa;
+  padding: 1.625em 0;
+}
+
+footer p {
   font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  font-size: 0.875rem;
+  line-height: 1.64;
+  text-align: center;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.hero-image {
+  position: relative;
+  height: 233px;
+}
+
+.hero-image .bg-overlay {
+  z-index: 1;
+  background-color: rgba(22, 22, 22, 0.6);
+}
+
+.hero-image img {
+  width: 100%;
+  height: 233px;
+  object-fit: cover;
+}
+
+.main-about > .container {
+  padding: 3em 1.625em;
+}
+
+.main-about > .container h2 {
+  font-size: 2rem;
+  line-height: 1.1875;
+}
+
+.main-about > .container p {
+  margin-top: 2em;
+  line-height: 1.375;
+}
+
+.main-about > .container .cta {
+  background-color: #ffcc8d;
+  margin-top: 3.4375em;
+  padding: 2em 2.3125em;
+  border-radius: 5px;
+}
+
+.main-about > .container .cta h3 {
+  font-size: 1.5rem;
+  line-height: 1.25;
+}
+
+.cta-btn:link,
+.cta-btn:visited {
+  display: inline-block;
+  font-weight: bold;
+  color: #fff;
+  line-height: 1.5;
+  background-color: #161616;
+  border-radius: 10px;
+  padding: 0.75em 1.5em;
+  margin-top: 2em;
 }
