--- a/src/index.css
+++ b/src/index.css
@@ -175,3 +175,69 @@ footer p {
   padding: 0.75em 1.5em;
   margin-top: 2em;
 }
+
+/* Van */
+
+.main-van h2 {
+  margin-top: 3.75em;
+}
+
+.vans-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 1rem;
+  padding-block: 3.5em;
+}
+
+.van-item {
+  max-width: 230px;
+}
+
+.van-image img {
+  display: block;
+  width: 100%;
+  height: auto;
+  border-radius: 5px;
+}
+
+.van-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.van-info h3 {
+  font-size: 1.25rem;
+  line-height: 1.6;
+  font-weight: 500;
+}
+
+.van-info p {
+  font-weight: 700;
+}
+
+.van-info p > span {
+  display: block;
+  font-weight: 500;
+}
+
+.van-tag {
+  line-height: 2;
+  color: #fff;
+  border-radius: 5px;
+  font-weight: 500;
+  padding: 0.2em 0.875em;
+}
+
+.van-tag.simple {
+  background-color: #e17654;
+}
+
+.van-tag.luxury {
+  background-color: #161616;
+}
+
+.van-tag.rugged {
+  background-color: #115e59;
+}
