Add error handling and change the way I fetch data in the /vans route. More change is needed.

--- a/src/index.css
+++ b/src/index.css
@@ -540,3 +540,11 @@ footer p {
   margin-top: 1.67em;
   border-radius: 5px;
 }
+
+/* ERROR component */
+.main-error {
+  padding: 3.125em 0;
+}
+.main-error p {
+  margin-top: 0.5em;
+}
